--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,13 +4,22 @@
   "private": true,
   "dependencies": {
     "@craco/craco": "^7.1.0",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-tabs": "^1.1.13",
     "autoprefixer": "^10.4.0",
     "axios": "^1.13.5",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "lucide-react": "^0.574.0",
+    "next-themes": "^0.4.6",
     "postcss": "^8.4.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-router-dom": "^7.13.0",
     "react-scripts": "5.0.1",
+    "sonner": "^2.0.7",
+    "tailwind-merge": "^3.5.0",
     "tailwindcss": "^3.4.0"
   },
   "scripts": {
